--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 <body>
 	<div class="container">
 		<div class="header">
-			<h1>John Doe</h1>
+			<h1>Mohammad Yazid Bustamin bin Mustoffa</h1>
 			<p>Web Developer</p>
 		</div>
 		<div class="main">
 			<h2>About Me</h2>
-			<p>I am a web developer with over 5 years of experience in building responsive websites and web applications. I am proficient in HTML, CSS, JavaScript, and various web development frameworks. I am also experienced in working with backend technologies such as PHP and MySQL.</p>
+			<p>Hi, my name’s Yazid and I’m a fresh grad science computer at UiTM. As well as programing I also have experience in networking. I’m currently working at telecommunication company as technical assistance. I hope i can get a chance to enhance my networking skills in your company.</p>
 
 			<h2>Skills</h2>
 			<ul>
@@ -21,17 +21,16 @@
 				<li>CSS</li>
 				<li>JavaScript</li>
 				<li>Bootstrap</li>
-				<li>jQuery</li>
-				<li>ReactJS</li>
-				<li>NodeJS</li>
 				<li>PHP</li>
 				<li>MySQL</li>
+				<li>Linux Machine</li>
+				<li>Routing</li>
 			</ul>
 
 			<h2>Experience</h2>
 			<div class="job">
-				<h3>Web Developer, ABC Company</h3>
-				<p class="date">2018 - Present</p>
+				<h3>Techincal Assistance, Telekom Malaysia Sdn. Bhd</h3>
+				<p class="date">2021 - Present</p>
 				<ul>
 					<li>Developed and maintained company website using WordPress</li>
 					<li>Designed and developed custom WordPress themes and plugins</li>
@@ -41,8 +40,8 @@
 			</div>
 
 			<div class="job">
-				<h3>Web Developer, XYZ Company</h3>
-				<p class="date">2015 - 2018</p>
+				<h3>Marketing Officer, Yoshinoya Hanamaru Sdn. Bhd</h3>
+				<p class="date">2019 - 2021</p>
 				<ul>
 					<li>Designed and developed responsive websites using HTML, CSS, and JavaScript</li>
 					<li>Worked with clients to understand their requirements and provide custom solutions</li>
@@ -53,8 +52,8 @@
 
 			<h2>Education</h2>
 			<div class="education">
-				<h3>Bachelor of Science in Computer Science, XYZ University</h3>
-				<p class="date">2011 - 2015</p>
+				<h3>Diploma in Computer Science, Universiti Teknologi Mara</h3>
+				<p class="date">2015 - 2018</p>
 			</div>
 		</div>
 	</div>
