--- a/index.html
+++ b/index.html
@@ -2,7 +2,11 @@
 <html>
 <head>
 	<title>My Resume</title>
+	!-- Include Bootstrap CSS -->
+	<link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+	<!-- Include Custom CSS -->
 	<link rel="stylesheet" type="text/css" href="style.css">
+	<!-- Include Custom JavaScript -->
 	<script src="script.js"></script>
 </head>
 <body>
