--- a/index.html
+++ b/index.html
@@ -2,18 +2,19 @@
 <html>
 <head>
 	<title>My Resume</title>
-	!-- Include Bootstrap CSS -->
-	<link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-	<!-- Include Custom CSS -->
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="style.css">
-	<!-- Include Custom JavaScript -->
+	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 	<script src="script.js"></script>
 </head>
 <body>
 	<div class="container">
 		<div class="header">
 			<h1>Mohammad Yazid Bustamin bin Mustoffa</h1>
-			<p>Web Developer</p>
+			<p>IT Support</p>
 		</div>
 		<div class="main">
 			<h2>About Me</h2>
