--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<div class="container">
 		<div class="header">
 			<h1>Mohammad Yazid Bustamin bin Mustoffa</h1>
-			<p>IT Support</p>
+			<p>IT Support Specialist</p>
 		</div>
 		<div class="main">
 			<h2>About Me</h2>
@@ -37,10 +37,9 @@
 				<h3>Techincal Assistance, Telekom Malaysia Sdn. Bhd</h3>
 				<p class="date">2021 - Present</p>
 				<ul>
-					<li>Developed and maintained company website using WordPress</li>
-					<li>Designed and developed custom WordPress themes and plugins</li>
-					<li>Implemented responsive design for mobile and tablet devices</li>
-					<li>Collaborated with team members to develop new features and improve website performance</li>
+					<li>Provided technical support to customer via email and over the phone</li>
+					<li>Resolved networking issues</li>
+					<li>1st level troubleshooting</li>
 				</ul>
 			</div>
 
@@ -48,10 +47,10 @@
 				<h3>Marketing Officer, Yoshinoya Hanamaru Sdn. Bhd</h3>
 				<p class="date">2019 - 2021</p>
 				<ul>
-					<li>Designed and developed responsive websites using HTML, CSS, and JavaScript</li>
-					<li>Worked with clients to understand their requirements and provide custom solutions</li>
-					<li>Implemented search engine optimization (SEO) techniques to improve website visibility</li>
-					<li>Collaborated with team members to develop new features and improve website performance</li>
+					<li>Created and managed content for various marketing channels, such as social media, email campaigns, and blog posts.</li>
+					<li>Conducted market research and analyzed data to identify trends, customer preferences, and opportunities for growth.</li>
+					<li>Developed and maintained relationships with external partners, such as advertising agencies, media outlets, and influencers.</li>
+					<li>Conducted A/B testing and other experiments to optimize marketing campaigns and improve conversion rates.</li>
 				</ul>
 			</div>
 
