--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<div class="container">
 		<div class="header">
 			<h1>Mohammad Yazid Bustamin bin Mustoffa</h1>
-			<p>IT Support Specialist</p>
+			<p>IT Support Technician</p>
 		</div>
 		<div class="main">
 			<h2>About Me</h2>
