--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <body>
 	<div class="container">
 		<div class="header">
+			<img src="passport.jpg" alt="Profile Picture">
 			<h1>Mohammad Yazid Bustamin bin Mustoffa</h1>
 			<p>IT Support Technician</p>
 		</div>
