--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<div class="header">
 			<img src="passport.jpg" alt="Profile Picture">
 			<h1>Mohammad Yazid Bustamin bin Mustoffa</h1>
-			<p>IT Support Technician</p>
+			<p>Techincal Assistance</p>
 		</div>
 		<div class="main">
 			<h2>About Me</h2>
