--- a/index.html
+++ b/index.html
@@ -1,66 +1,69 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>My Resume</title>
+	<title>Eucleast Homepage</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-	<link rel="stylesheet" type="text/css" href="style.css">
-	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
-	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-	<script src="script.js"></script>
 </head>
 <body>
-	<div class="container">
-		<div class="header">
-			<img src="passport.jpg" alt="Profile Picture">
-			<h1>Mohammad Yazid Bustamin bin Mustoffa</h1>
-			<p>Techincal Assistance</p>
-		</div>
-		<div class="main">
-			<h2>About Me</h2>
-			<p>Hi, my name’s Yazid and I’m a fresh grad science computer at UiTM. As well as programing I also have experience in networking. I’m currently working at telecommunication company as technical assistance. I hope i can get a chance to enhance my networking skills in your company.</p>
-
-			<h2>Skills</h2>
-			<ul>
-				<li>HTML</li>
-				<li>CSS</li>
-				<li>JavaScript</li>
-				<li>Bootstrap</li>
-				<li>PHP</li>
-				<li>MySQL</li>
-				<li>Linux Machine</li>
-				<li>Routing</li>
+	<nav class="navbar navbar-expand-lg navbar-light bg-light">
+		<a class="navbar-brand" href="#">My Website</a>
+		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+			<span class="navbar-toggler-icon"></span>
+		</button>
+		<div class="collapse navbar-collapse" id="navbarNav">
+			<ul class="navbar-nav">
+				<li class="nav-item active">
+					<a class="nav-link" href="#">Home</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="my_cv.html">About</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="#">Services</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="#">Contact</a>
+				</li>
 			</ul>
+		</div>
+	</nav>
 
-			<h2>Experience</h2>
-			<div class="job">
-				<h3>Techincal Assistance, Telekom Malaysia Sdn. Bhd</h3>
-				<p class="date">2021 - Present</p>
+	<div class="jumbotron">
+		<h1 class="display-4">Welcome to my website!</h1>
+		<p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+		<hr class="my-4">
+		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+		<a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+	</div>
+
+	<div class="container">
+		<div class="row">
+			<div class="col-sm">
+				<h2>About Us</h2>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+			</div>
+			<div class="col-sm">
+				<h2>Our Services</h2>
 				<ul>
-					<li>Provided technical support to customer via email and over the phone</li>
-					<li>Resolved networking issues</li>
-					<li>1st level troubleshooting</li>
+					<li>Service 1</li>
+					<li>Service 2</li>
+					<li>Service 3</li>
+					<li>Service 4</li>
 				</ul>
 			</div>
-
-			<div class="job">
-				<h3>Marketing Officer, Yoshinoya Hanamaru Sdn. Bhd</h3>
-				<p class="date">2019 - 2021</p>
-				<ul>
-					<li>Created and managed content for various marketing channels, such as social media, email campaigns, and blog posts.</li>
-					<li>Conducted market research and analyzed data to identify trends, customer preferences, and opportunities for growth.</li>
-					<li>Developed and maintained relationships with external partners, such as advertising agencies, media outlets, and influencers.</li>
-					<li>Conducted A/B testing and other experiments to optimize marketing campaigns and improve conversion rates.</li>
-				</ul>
-			</div>
-
-			<h2>Education</h2>
-			<div class="education">
-				<h3>Diploma in Computer Science, Universiti Teknologi Mara</h3>
-				<p class="date">2015 - 2018</p>
+			<div class="col-sm">
+				<h2>Contact Us</h2>
+				<p>123 Main Street<br>Anytown, USA 12345<br>Phone: (123) 456-7890<br>Email: info@mywebsite.com</p>
 			</div>
 		</div>
 	</div>
-</body>
-</html>
+
+	<footer class="footer">
+		<div class="container">
+			<span class="text-muted">© 2023 My Website. All rights reserved.</span>
+		</div>
+	</footer>
+
+	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/
