--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Eucleast Homepage</title>
+	<title>Eucleast's Homepage</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 </head>
 <body>
 	<nav class="navbar navbar-expand-lg navbar-light bg-light">
-		<a class="navbar-brand" href="#">My Website</a>
+		<a class="navbar-brand" href="#">Eucleast's Website</a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
 		</button>
@@ -19,49 +19,29 @@
 				<li class="nav-item">
 					<a class="nav-link" href="my_cv.html">About</a>
 				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="#">Services</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="#">Contact</a>
-				</li>
 			</ul>
 		</div>
 	</nav>
 
 	<div class="jumbotron">
 		<h1 class="display-4">Welcome to my website!</h1>
-		<p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-		<hr class="my-4">
-		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-		<a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+		<p class="lead">Simple website hosted on github</p>
 	</div>
 
 	<div class="container">
 		<div class="row">
+			<div></div>
+			<div></div>
 			<div class="col-sm">
-				<h2>About Us</h2>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-			</div>
-			<div class="col-sm">
-				<h2>Our Services</h2>
-				<ul>
-					<li>Service 1</li>
-					<li>Service 2</li>
-					<li>Service 3</li>
-					<li>Service 4</li>
-				</ul>
-			</div>
-			<div class="col-sm">
-				<h2>Contact Us</h2>
-				<p>123 Main Street<br>Anytown, USA 12345<br>Phone: (123) 456-7890<br>Email: info@mywebsite.com</p>
+				<h2>Contact Me</h2>
+				<p>Emaiul: mohdyazid97@gmail.com</p>
 			</div>
 		</div>
 	</div>
 
 	<footer class="footer">
 		<div class="container">
-			<span class="text-muted">© 2023 My Website. All rights reserved.</span>
+			<span class="text-muted">© 2023 Eucleast. All rights reserved.</span>
 		</div>
 	</footer>
 
