--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 			<div></div>
 			<div class="col-sm">
 				<h2>Contact Me</h2>
-				<p>Emaiul: mohdyazid97@gmail.com</p>
+				<p>Email: mohdyazid97@gmail.com</p>
 			</div>
 		</div>
 	</div>
