--- a/my_cv.html
+++ b/my_cv.html
@@ -29,7 +29,7 @@
 	</nav>
 	<div class="container">
 		<div class="header">
-			<img src="asstes/passport.jpg" alt="Profile Picture">
+			<img src="assets/passport.jpg" alt="Profile Picture">
 			<h1>Mohammad Yazid Bustamin bin Mustoffa</h1>
 			<p>Techincal Assistance</p>
 		</div>
