--- a/my_cv.html
+++ b/my_cv.html
@@ -29,9 +29,9 @@
 	</nav>
 	<div class="container">
 		<div class="header">
-			<img src="assets/passport.jpg" alt="Profile Picture">
+			<img src="/assets/passport.jpg" alt="Profile Picture">
 			<h1>Mohammad Yazid Bustamin bin Mustoffa</h1>
-			<p>Techincal Assistance</p>
+			<p>Technical Assistance</p>
 		</div>
 		<div class="main">
 			<h2>About Me</h2>
