--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 	</nav>
 	<div class="container">
 		<div class="header">
-			<img src="/assets/passport.jpg" alt="Profile Picture">
+			<img src="assets/passport.jpg" alt="Profile Picture">
 			<h1>Mohammad Yazid Bustamin bin Mustoffa</h1>
 			<p>Technical Assistance</p>
 		</div>
