--- a/contact.html
+++ b/contact.html
@@ -10,10 +10,10 @@
 		<div class="collapse navbar-collapse" id="navbarNav">
 			<ul class="navbar-nav">
 				<li class="nav-item active">
-					<a class="nav-link" href="#">Home</a>
+					<a class="nav-link" href="index.html">Home</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="my_cv.html">About</a>
+					<a class="nav-link" href="contact.html">About</a>
 				</li>
 			</ul>
 		</div>
