--- a/my_cv.html
+++ b/my_cv.html
@@ -18,7 +18,7 @@
 					<a class="nav-link" href="index.html">Home</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="my_cv.html">About</a>
+					<a class="nav-link" href="my_cv.html">My CV</a>
 				</li>
 			</ul>
 		</div>
