--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 					<a class="nav-link" href="index.html">Home</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="contact.html">About</a>
+					<a class="nav-link" href="my_cv.html">My CV</a>
 				</li>
 			</ul>
 		</div>
