--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 			</div>
 		</div>
 	</div>
+</body>
 
 	<footer class="footer">
 		<div class="container">
@@ -43,3 +44,4 @@
 
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/
+</html>
