--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 	</nav>
 
 	<div class="jumbotron">
-		<h1 class="display-4">Welcome to my website!</h1>
-		<p class="lead">Simple website hosted on github</p>
+		<h1 class="display-4">Welcome to my website</h1>
+		<p class="lead">Hosted using github page</p>
 	</div>
 
 	<div class="container">
