--- a/my_cv.html
+++ b/my_cv.html
@@ -4,7 +4,7 @@
 	<title>My CV</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-	<link rel="stylesheet" type="text/css" href="/assets/style.css">
+	<link rel="stylesheet" type="text/css" href="assets/style.css">
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
@@ -25,7 +25,7 @@
 	</nav>
 	<div class="container">
 		<div class="header">
-			<img src="/assets/passport.jpg" alt="Profile Picture">
+			<img src="assets/passport.jpg" alt="Profile Picture">
 			<h1>Mohammad Yazid Bustamin bin Mustoffa</h1>
 			<p>Technical Assistance</p>
 		</div>
