--- a/my_cv.html
+++ b/my_cv.html
@@ -8,7 +8,6 @@
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-	<script src="script.js"></script>
 </head>
 <body>
 	<nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -23,7 +22,7 @@
 			</ul>
 		</div>
 	</nav>
-	<div class="container">
+	<div align="center" class="container">
 		<div class="header">
 			<img src="assets/passport.jpg" alt="Profile Picture">
 			<h1>Mohammad Yazid Bustamin bin Mustoffa</h1>
