--- a/my_cv.html
+++ b/my_cv.html
@@ -22,7 +22,7 @@
 			</ul>
 		</div>
 	</nav>
-	<div align="center" class="container">
+	<div class="container">
 		<div class="header">
 			<img src="assets/passport.jpg" alt="Profile Picture">
 			<h1>Mohammad Yazid Bustamin bin Mustoffa</h1>
