--- a/my_cv.html
+++ b/my_cv.html
@@ -26,32 +26,29 @@
 		<div class="header">
 			<img src="assets/passport.jpg" alt="Profile Picture">
 			<h1>Mohammad Yazid Bustamin bin Mustoffa</h1>
-			<p>Technical Assistance</p>
+			<p>Technical Assistant</p>
 		</div>
 		<div class="main">
 			<h2>About Me</h2>
-			<p>Hi, my name’s Yazid and I’m a fresh grad science computer at UiTM. As well as programing I also have experience in networking. I’m currently working at telecommunication company as technical assistance. I hope i can get a chance to enhance my networking skills in your company.</p>
-
+			<p>Hi, my name’s Yazid. Experienced Assistant Technician International with almost 3 years of hands-on experience in network troubleshooting. Holds a Diploma of Computer Science. Approach every task with a strong aptitude for problem-solving and effective communication skills. Seeking better-related opportunities to further apply my skills in ensuring high service level guarantees and maintaining network systems.</p>
 			<h2>Skills</h2>
 			<ul>
-				<li>HTML</li>
-				<li>CSS</li>
-				<li>JavaScript</li>
-				<li>Bootstrap</li>
-				<li>PHP</li>
-				<li>MySQL</li>
-				<li>Linux Machine</li>
-				<li>Routing</li>
+				<li>HTML,CSS,JavaScript,Bootstrap,PHP,MYSQL</li>
+				<li>Linux Machine,Windows</li>
+				<li>Customer Support,Troubleshooting,Techinical Support,Analytical Skills,Incident Response,Ticketing System</li>
+				<li>Multiprotocol Label Switching(MPLS),Wide Area Network(WAN),Local Area Network(LAN),Metro Ethernet,Telecommunications,Network Topology</li>
 			</ul>
 
 			<h2>Experience</h2>
 			<div class="job">
-				<h3>Techincal Assistance, Telekom Malaysia Sdn. Bhd</h3>
-				<p class="date">2021 - Present</p>
+				<h3>Techincal Assistant, Telekom Malaysia Sdn. Bhd</h3>
+				<p class="date">2021 - 2024</p>
 				<ul>
-					<li>Provided technical support to customer via email and over the phone</li>
-					<li>Resolved networking issues</li>
-					<li>1st level troubleshooting</li>
+					<li>Execute first-level troubleshooting using Network System before escalating trouble tickets to NOC.</li>
+					<li>Prioritize High Service Level Guarantee circuits and provide frequent updates to customers.</li>
+					<li>Identify and diagnose network problems and issues.</li>
+					<li>Collaborate with senior technicians or engineers to resolve technical problems efficiently.</li>
+					<li>Conduct testing and quality assurance checks to ensure that the network is performing optimally.</li>
 				</ul>
 			</div>
 
@@ -63,6 +60,15 @@
 					<li>Conducted market research and analyzed data to identify trends, customer preferences, and opportunities for growth.</li>
 					<li>Developed and maintained relationships with external partners, such as advertising agencies, media outlets, and influencers.</li>
 					<li>Conducted A/B testing and other experiments to optimize marketing campaigns and improve conversion rates.</li>
+				</ul>
+			</div>
+
+			<div class="job">
+				<h3>Full Stack Delevepor(Internship) Localhost Sdn. Bhd</h3>
+				<p class="date">2017(2 Months)</p>
+				<ul>
+					<li>Experienced in Ruby on Rails development, adept at building scalable web applications with clean and efficient code. </li>
+					<li>Proficient in utilizing Rails framework to rapidly develop robust features and implement best practices in web development.</li>
 				</ul>
 			</div>
 
