--- a/my_cv.html
+++ b/my_cv.html
@@ -41,7 +41,7 @@
 
 			<h2>Experience</h2>
 			<div class="job">
-				<h3>Techincal Assistant, Telekom Malaysia Sdn. Bhd</h3>
+				<h3>Technical Assistant, Telekom Malaysia Sdn. Bhd</h3>
 				<p class="date">2021 - 2024</p>
 				<ul>
 					<li>Execute first-level troubleshooting using Network System before escalating trouble tickets to NOC.</li>
